--- a/index.html
+++ b/index.html
@@ -469,9 +469,29 @@
             </li>
           </ul>
         </div>
+        <div class="footer-form-wrap">
+          <p class="footer-subtitle">Subscribe</p>
+          <form class="footer-form">
+            <label for="footer-email" aria-label="footer-email"></label>
+            <div class="footer-form-container">
+              <input
+                type="email"
+                name="footer-email"
+                id="footer-email"
+                placeholder="E-mail"
+                class="footer-input"
+              />
+              <button type="submit" class="footer-btn">
+                Subscribe<svg class="footer-btn-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-send"></use>
+                </svg>
+              </button>
+            </div>
+          </form>
+        </div>
       </div>
     </footer>
-    <div class="backdrop is-open">
+    <div class="backdrop">
       <div class="modal">
         <button type="button" class="modal-close-btn">
           <svg class="modal-close-icon" width="8" height="8">
