--- a/index.html
+++ b/index.html
@@ -472,26 +472,28 @@
         <div class="footer-form-wrap">
           <p class="footer-subtitle">Subscribe</p>
           <form class="footer-form">
-            <label for="footer-email" aria-label="footer-email"></label>
-            <div class="footer-form-container">
-              <input
-                type="email"
-                name="footer-email"
-                id="footer-email"
-                placeholder="E-mail"
-                class="footer-input"
-              />
-              <button type="submit" class="footer-btn">
-                Subscribe<svg class="footer-btn-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-send"></use>
-                </svg>
-              </button>
-            </div>
+            <label
+              for="footer-email"
+              aria-label="footer-email"
+              class="footer-label"
+            ></label>
+            <input
+              type="email"
+              name="footer-email"
+              id="footer-email"
+              placeholder="E-mail"
+              class="footer-input"
+            />
+            <button type="submit" class="footer-btn">
+              Subscribe<svg class="footer-btn-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-send"></use>
+              </svg>
+            </button>
           </form>
         </div>
       </div>
     </footer>
-    <div class="backdrop">
+    <div class="backdrop is-open">
       <div class="modal">
         <button type="button" class="modal-close-btn">
           <svg class="modal-close-icon" width="8" height="8">
@@ -554,13 +556,13 @@
           <div class="modal-checkbox-wrapper">
             <input
               type="checkbox"
-              name="user-check"
-              id="user-check"
+              name="user-privacy"
+              id="user-privacy"
               value="true"
               class="modal-check visually-hidden"
             />
-            <label for="user-check" class="modal-check-text"
-              ><span>
+            <label for="user-privacy" class="modal-check-text"
+              ><span class="modal-check-span">
                 <svg class="modal-check-icon" width="10" height="8">
                   <use href="./images/icons.svg#icon-check"></use>
                 </svg> </span
