--- a/index.html
+++ b/index.html
@@ -472,18 +472,15 @@
         <div class="footer-form-wrap">
           <p class="footer-subtitle">Subscribe</p>
           <form class="footer-form">
-            <label
-              for="footer-email"
-              aria-label="footer-email"
-              class="footer-label"
-            ></label>
-            <input
-              type="email"
-              name="footer-email"
-              id="footer-email"
-              placeholder="E-mail"
-              class="footer-input"
-            />
+            <label aria-label="footer-email" class="footer-label"
+              ><input
+                type="email"
+                name="footer-email"
+                placeholder="E-mail"
+                class="footer-input"
+              />
+            </label>
+
             <button type="submit" class="footer-btn">
               Subscribe<svg class="footer-btn-icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-send"></use>
